@@ -33,11 +33,15 @@
 
 #include "index_manager.h"
 
+//! maximum length of target identifier
+#define MAX_LENOFTID 30
+
 //! maximum length of target name
 #define MAX_LENOFTARGET 128
 
 //! target parameters
 typedef struct target_param{
+  char tid[MAX_LENOFTID];         //!< taregt identifier
   char filename[MAX_LENOFTARGET]; //!< file name
   int fd;                         //!< file descriptor
   int csn;                        //!< codestream number
@@ -137,6 +141,16 @@ void print_alltarget( targetlist_param_t *targetlist);
  * @return               found target pointer
  */
 target_param_t * search_target( char targetname[], targetlist_param_t *targetlist);
+
+
+/**
+ * search a target by tid
+ *
+ * @param[in] tid        target identifier
+ * @param[in] targetlist target list pointer
+ * @return               found target pointer
+ */
+target_param_t * search_targetBytid( char tid[], targetlist_param_t *targetlist);
 
 #endif 	    /* !TARGET_MANAGER_H_ */
 
